--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,9 +48,8 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TF_VAR_name: ${{ steps.get_version.outputs.VERSION }}
         TF_VAR_branch: ${{ steps.get_version.outputs.VERSION }}
-        TF_VAR_variable_build_github_oauth_token: ${{ secrets.AWS_GIT_PARAM}}
       run: |
-        terraform init -backend-config="bucket=terra-aws-waf" -backend-config="key=${{ steps.get_version.outputs.VERSION }}-delete" -backend-config="region=ap-south-1" -backend=true -input=false
+        terraform init -backend-config="bucket=day0day01" -backend-config="key=${{ steps.get_version.outputs.VERSION }}-delete" -backend-config="region=us-east-1" -backend=true -input=false
     - name: Terraform validation
       env:
         APP_NAME: .daytoday.io
@@ -58,7 +57,6 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TF_VAR_name: ${{ steps.get_version.outputs.VERSION }}
         TF_VAR_branch: ${{ steps.get_version.outputs.VERSION }}
-        TF_VAR_variable_build_github_oauth_token: ${{ secrets.AWS_GIT_PARAM}}
       run: terraform validate
     - name: Terraform apply
       env:
@@ -67,5 +65,5 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TF_VAR_name: ${{ steps.get_version.outputs.VERSION }}
         TF_VAR_branch: ${{ steps.get_version.outputs.VERSION }}
-        TF_VAR_variable_build_github_oauth_token: ${{ secrets.AWS_GIT_PARAM}}
+
       run: terraform apply -auto-approve
