--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -13,10 +13,7 @@ jobs:
       AWS_REGION: 'us-east-1'
     steps:
       - uses: actions/checkout@master
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
+      - run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
