--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -13,9 +13,6 @@ jobs:
       AWS_REGION: 'us-east-1'
     steps:
       - uses: actions/checkout@master
-      - run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - run: echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
       - run: terraform init
-      - run: terraform destroy -auto-approve
+      - run: terraform destroy -var="branch_name=$BRANCH_NAME" -auto-approve
