--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -141,7 +141,7 @@ jobs:
         echo "the name = " ${{ steps.get_version.outputs.VERSION }}
         aws s3 cp s3://day0day01/main.tf .
         key_name=${{ steps.get_version.outputs.VERSION }}-delete
-        sed -i 's/demo/$key_name' main.tf
+        sed -e 's/demo/$key_name' main.tf
         terraform destroy --auto-approve
         
         
