--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -142,6 +142,7 @@ jobs:
         aws s3 cp s3://day0day01/main.tf .
         key_name=${{ steps.get_version.outputs.VERSION }}-delete
         #sed -e 's/demo/$key_name/g' main.tf
+        terraform init
         terraform destroy --auto-approve
         
         
