--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -51,7 +51,17 @@ jobs:
     - shell: bash
       run: |
         aws ssm put-parameter  --name "ebs_mongo_db_name_dev" --type "String"  --value "${{ steps.get_version.outputs.VERSION }}" --overwrite
-    - run: echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
+        
+    - name: Configure AWS Credentials
+      uses: actions/checkout@master
+    - shell: bash
+      run: |
+        #echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
+        aws s3 cp s3://day0day01/main.tf .
+        key_name=echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
+        #sed -e 's/demo/$key_name/g' main.tf
+        terraform init
+        terraform destroy --auto-approve
 
 
 
