--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -58,7 +58,7 @@ jobs:
       run: |
         #echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
         aws s3 cp s3://day0day01/main.tf .
-        key_name=echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
+        key_name=${{ github.head_ref }}"
         #sed -e 's/demo/$key_name/g' main.tf
         terraform init
         terraform destroy --auto-approve
@@ -154,7 +154,7 @@ jobs:
         echo "try fail val = " ${GITHUB_REF##*/}
         echo "the name = " ${{ steps.get_version.outputs.VERSION }}
         aws s3 cp s3://day0day01/main.tf .
-        key_name=echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
+        #key_name=echo "::set-env name=BRANCH_NAME::${{ github.head_ref }}"
         #sed -e 's/demo/$key_name/g' main.tf
         terraform init
         terraform destroy --auto-approve
