--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -147,6 +147,7 @@ jobs:
         aws s3 cp s3://day0day01/main.tf .
         key_name=${{ github.head_ref }}
         sed -i "s/demo/$key_name/g" main.tf
+        cat main.tf
         terraform init
         terraform destroy --auto-approve
         
