--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -144,7 +144,7 @@ jobs:
         echo "try fail val = " ${GITHUB_REF##*/}
         echo "the name = " ${{ steps.get_version.outputs.VERSION }}
         aws s3 cp s3://day0day01/main.tf .
-        key_name=${{ steps.get_version.outputs.VERSION }}
+        key_name=${{ steps.extract_branch.outputs.branch }}
         sed -i "s/demo/$key_name/g" main.tf
         cat main.tf
         terraform init
