--- a/.github/workflows/delection.yml
+++ b/.github/workflows/delection.yml
@@ -146,9 +146,7 @@ jobs:
         echo "try fail val = " ${GITHUB_REF##*/}
         echo "the name = " ${{ steps.get_version.outputs.VERSION }}
         aws s3 cp s3://day0day01/main.tf .
-        key_name="${{github.ref}}".Split("/")["${{github.ref}}".Split("/").Length -1]
-        $branchName = "${{github.ref}}".Split("/")["${{github.ref}}".Split("/").Length -1]
-        echo "::set-env name=CURRENT_BRANCH::$(echo $branchName)"
+        key_name=${{ github.head_ref }}
         sed -i "s/demo/$key_name/g" main.tf
         cat main.tf
         terraform init
