--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches-ignore:
       - '*'
-    tags-ignore:
-      - 'delete-*'
+    tags:
+      - '*'
 jobs:
   terraform_apply:
     runs-on: ubuntu-latest
